# LoCo

./: .gitignore  ACE_README.md  BUILD_SUMMARY.md  FEATURES.md  QUICKSTART.md  README.md  docker-compose.yml  loco_agent.db  start-frontend.bat  start-frontend.sh  start.bat  start.sh  test_list_files.py  tmpclaude-e8eb-cwd
.claude/: settings.local.json
android/: build.gradle.kts  settings.gradle.kts
backend/: loco_agent.db  requirements.txt  schema.sql
backend/app/: main.py
backend/tests/: conftest.py  test_agent_helpers.py  test_agent_tools.py  test_api_ace.py  test_api_knowledge.py  test_api_models.py  test_api_sessions.py  test_api_workspaces.py  test_auth.py  test_chunker.py  test_config.py  test_curator_apply.py  test_domain_indexer_docs.py  (+21 more)
docs/: ACE.md  AGENT_WEB_TOOLS.md  ARCHITECTURE.md  DATA_MODEL.md  ERROR_HANDLING.md  INDEX.md  PROTOCOL.md  RAG_AND_INDEXING.md  README.md  RESEARCH_NOTES.md  ROADMAP.md  SECURITY.md  UI_UX.md  VERSIONING.md
extension/: package-lock.json  package.json
modules/3d-gen-desktop/src-tauri/: Cargo.toml  tauri.conf.json
modules/3d-gen-desktop/src-tauri/capabilities/: default.json
modules/3d-gen-desktop/src-tauri/src/: main.rs
modules/agent-ui/src-tauri/: Cargo.toml  tauri.conf.json
modules/agent-ui/src-tauri/src/: main.rs
packaging/: README.md  build-3d-gen-desktop.bat  build-3d-gen-desktop.sh  build-all.sh  build-android-apk.bat  build-android-apk.sh  build-extension.bat  build-extension.sh  build-server-linux.sh  build-server-windows.bat
qdrant_storage/: raft_state.json
server/: Dockerfile  requirements.txt
(+775 files in other folders)
