[package]
name = "loco-3d-gen"
version = "0.1.0"
description = "LoCo 3D-Gen desktop frontend"
authors = ["LoCo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-open"] }
