[package]
name = "loco-agent-ui"
version = "0.1.0"
description = "LoCo Agent Studio desktop app"
authors = ["LoCo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
